another big commit

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Explore.js</title>
-    <script src="dev.dependencies.min.js"></script>
-    <script src="engine.dev.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="css/engine.dev.min.css">
-    <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
+    <script src="explore.dev.dependencies.min.js"></script>
+    <script src="explore.dev.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/explore.dev.dependencies.css">
+    <link type="text/css" rel="stylesheet" href="css/explore.dev.css">
     <!--<link type="text/css" rel="stylesheet" href="css/propertiesJS.css">-->
 </head>
 <body>
