logo and top bar tweaks

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="../img/logo_small.png" />
     <meta charset="UTF-8">
     <title>Explore.js</title>
     <script src="explore.dev.dependencies.min.js"></script>
