--- a/dev/index.html
+++ b/dev/index.html
@@ -6,6 +6,7 @@
     <title>Explore.js</title>
     <script src="explore.dev.dependencies.min.js"></script>
     <script src="explore.dev.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/jstree/style.min.css">
     <link type="text/css" rel="stylesheet" href="css/explore.dev.dependencies.css">
     <link type="text/css" rel="stylesheet" href="css/explore.dev.css">
     <!--<link type="text/css" rel="stylesheet" href="css/propertiesJS.css">-->
