new build process

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <link rel="icon" type="image/png" href="/img/logo_small.png" />
     <meta charset="UTF-8">
     <title>Explore.js</title>
-    <script src="explore.dev.dependencies.min.js"></script>
-    <script src="explore.dev.min.js"></script>
+    <script src="explore.editor.dependencies.js"></script>
+    <script src="explore.editor.js"></script>
     <link type="text/css" rel="stylesheet" href="css/jstree/style.min.css">
-    <link type="text/css" rel="stylesheet" href="css/explore.dev.dependencies.css">
-    <link type="text/css" rel="stylesheet" href="css/explore.dev.css">
+    <link type="text/css" rel="stylesheet" href="css/explore.editor.dependencies.css">
+    <link type="text/css" rel="stylesheet" href="css/explore.editor.css">
     <!--<link type="text/css" rel="stylesheet" href="css/propertiesJS.css">-->
 </head>
 <body>
