better build process

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Explore.js</title>
     <script src="explore.editor.dependencies.js"></script>
     <script src="explore.editor.js"></script>
+    <!-- import physics -->
     <link type="text/css" rel="stylesheet" href="css/jstree/style.min.css">
     <link type="text/css" rel="stylesheet" href="css/explore.editor.dependencies.css">
     <link type="text/css" rel="stylesheet" href="css/explore.editor.css">
