--- a/public/play/index.html
+++ b/public/play/index.html
@@ -22,7 +22,7 @@
         }
     </style>
     <script src="/explore.dependencies.js"></script>
-    <script src="/explore.min.js"></script>
+    <script src="/explore.js"></script>
 </head>
 <body>
 <canvas id="canvas" class="anotherCanvas"></canvas>
