--- a/public/play/index.html
+++ b/public/play/index.html
@@ -21,8 +21,8 @@
             height: 100%;
         }
     </style>
-    <script src="/explore.dependencies.js"></script>
-    <script src="/explore.js"></script>
+    <script src="explore.dependencies.js"></script>
+    <script src="explore.js"></script>
 </head>
 <body>
 <canvas id="canvas" class="anotherCanvas"></canvas>
