--- a/public/play/index.html
+++ b/public/play/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" type="image/png" href="/img/logo_small.png" />
     <meta charset="UTF-8">
-    <title>Explore.js</title>
+    <title>Open Edit Play</title>
     <style>
         html, body {
             position: relative;
