--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" type="image/png" href="/img/logo_small.png" />
     <meta charset="UTF-8">
-    <title>Explore.js</title>
+    <title>Open Edit Play</title>
     <script src="/edit/explore.editor.dependencies.js"></script>
     <script src="/edit/explore.editor.js"></script>
     <!-- import physics -->
