--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -4,12 +4,12 @@
     <link rel="icon" type="image/png" href="/img/logo_small.png" />
     <meta charset="UTF-8">
     <title>Open Edit Play</title>
-    <script src="/edit/explore.editor.dependencies.js"></script>
-    <script src="/edit/explore.editor.js"></script>
+    <script src="/edit/openeditplay.editor.dependencies.js"></script>
+    <script src="/edit/openeditplay.editor.js"></script>
     <!-- import physics -->
     <link type="text/css" rel="stylesheet" href="/edit/css/jstree/style.min.css">
-    <link type="text/css" rel="stylesheet" href="/edit/css/explore.editor.dependencies.css">
-    <link type="text/css" rel="stylesheet" href="/edit/css/explore.editor.css">
+    <link type="text/css" rel="stylesheet" href="/edit/css/openeditplay.editor.dependencies.css">
+    <link type="text/css" rel="stylesheet" href="/edit/css/openeditplay.editor.css">
     <!--<link type="text/css" rel="stylesheet" href="css/propertiesJS.css">-->
 </head>
 <body>
