--- a/public/edit/test.html
+++ b/public/edit/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="/img/logo_small.png" />
+    <link rel="icon" type="image/png" href="/img/logo_graphics.png" />
     <meta charset="UTF-8">
     <title>Open Edit Play</title>
     <script src="/edit/openeditplay.editor.dependencies.js"></script>
