--- a/public/play/index.html
+++ b/public/play/index.html
@@ -25,7 +25,7 @@
     <script src="openeditplay.js"></script>
 </head>
 <body>
-<canvas id="canvas" class="anotherCanvas"></canvas>
+<canvas id="canvas" class="openEditPlayCanvas"></canvas>
 <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
