--- a/public/play/index.html
+++ b/public/play/index.html
@@ -17,8 +17,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: 100% !important;
+            height: 100% !important;
         }
     </style>
     <script src="openeditplay.dependencies.js"></script>
