--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="/js/gameElement.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <title>Open Edit Play</title>
 </head>
