mobile friendly site

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -3,6 +3,12 @@
 <head>
     <link rel="icon" type="image/png" href="/img/logo_graphics.png" />
     <meta charset="UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="/img/logo_graphics.png">
+    
     <title>Open Edit Play</title>
     <link type="text/css" rel="stylesheet" href="/play/css/openeditplay.css">
     <script src="openeditplay.dependencies.js"></script>
