--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     <script src="/js/util.js"></script>
     <script src="/js/gameElement.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="/img/logo_graphics.png">
+    
     <title>Open Edit Play</title>
 </head>
 <body>
@@ -93,23 +95,30 @@
 		});
 
 		var topBarBackground = document.getElementById('topBarBackground');
-		window.onscroll = function () {
-			"use strict";
-			var scroll = document.body.scrollTop;
+		if (window.screen.width > 800) {
+			// In large devices, do mooth scrolling experience
+            
+			window.onscroll = function () {
+				"use strict";
+				var scroll = document.body.scrollTop;
 
-			var point1 = 100;
-			var point2 = 350;
-			var fullOpacity = 1;
+				var point1 = 100;
+				var point2 = 350;
+				var fullOpacity = 1;
 
-			if (scroll < point1) {
-				topBarBackground.style.opacity = 0;
-			} else if (scroll < point2) {
-				topBarBackground.style.opacity = (scroll - point1) / (point2 - point1) * fullOpacity;
-			} else {
-				topBarBackground.style.opacity = fullOpacity;
-			}
-		};
-		window.onscroll();
+				if (scroll < point1) {
+					topBarBackground.style.opacity = 0;
+				} else if (scroll < point2) {
+					topBarBackground.style.opacity = (scroll - point1) / (point2 - point1) * fullOpacity;
+				} else {
+					topBarBackground.style.opacity = fullOpacity;
+				}
+			};
+			window.onscroll();
+		} else {
+			// In small devices, just show the top bar always. In iOS, scolling events can't be trusted.
+			topBarBackground.style.opacity = 1;
+        }
 	}
 </script>
 
