--- a/public/play/index.html
+++ b/public/play/index.html
@@ -19,16 +19,13 @@
 <canvas id="canvas" class="openEditPlayCanvas"></canvas>
 <div id="fullscreenInfo">Click for fullscreen</div>
 <div id="touchUI">
-    <div id="touchArrows">
-        <div id="touchUp"><span>Up</span></div>
-        <div id="touchDown"><span>Down</span></div>
-        <div id="touchLeft"><span>Left</span></div>
-        <div id="touchRight"><span>Right</span></div>
-    </div>
-    <div id="touchButtons">
-        <div id="touchA"><span>A</span></div>
-        <div id="touchB"><span>B</span></div>
-    </div>
+    <div id="touchUp"><span class="text">Up</span></div>
+    <div id="touchDown"><span class="text">Down</span></div>
+    <div id="touchLeft"><span class="text">Left</span></div>
+    <div id="touchRight"><span class="text">Right</span></div>
+    <div id="touchJump"><span class="text">Jump</span></div>
+    <div id="touchA"><span class="letter">A</span></div>
+    <div id="touchB"><span class="letter">B</span></div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
 </body>
