--- a/public/play/index.html
+++ b/public/play/index.html
@@ -15,7 +15,7 @@
     <script src="openeditplay.js"></script>
 </head>
 <body>
-<a id="backButton" href="/"> Back </a>
+<a id="backButton" href="/" ontouchstart="setTimeout('window.history.back();', 50);"> Back </a>
 <canvas id="canvas" class="openEditPlayCanvas"></canvas>
 <div id="fullscreenInfo">Click for fullscreen</div>
 <div id="touchUI">
