bigger touch control areas

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -27,6 +27,7 @@
     <div id="touchA"><span class="letter">A</span></div>
     <div id="touchB"><span class="letter">B</span></div>
 </div>
+<div id="debug"></div>
 <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
