--- a/public/play/index.html
+++ b/public/play/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="/img/logo_graphics.png" />
+    <link rel="icon" type="image/png" href="/img/logo_graphics.png"/>
     <meta charset="UTF-8">
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="/img/logo_graphics.png">
-    
+
     <title>Open Edit Play</title>
     <link type="text/css" rel="stylesheet" href="/play/css/openeditplay.css">
     <script src="openeditplay.dependencies.js"></script>
     <script src="openeditplay.js"></script>
 </head>
 <body>
-<a id="backButton" href="/" ontouchstart="setTimeout('window.history.back();', 50);"> Back </a>
-<canvas id="canvas" class="openEditPlayCanvas"></canvas>
-<div id="fullscreenInfo">Click for fullscreen</div>
-<div id="touchUI">
-    <div id="touchUp"><span class="text">Up</span></div>
-    <div id="touchDown"><span class="text">Down</span></div>
-    <div id="touchLeft"><span class="text">Left</span></div>
-    <div id="touchRight"><span class="text">Right</span></div>
-    <div id="touchJump"><span class="text">Jump</span></div>
-    <div id="touchA"><span class="letter">A</span></div>
-    <div id="touchB"><span class="letter">B</span></div>
+<div id="screen">
+    <a id="backButton" href="/" ontouchstart="setTimeout('window.history.back();', 50);"> Back </a>
+    <canvas id="canvas" class="openEditPlayCanvas"></canvas>
+    <div id="fullscreenInfo">Click for fullscreen</div>
+    <div id="touchUI">
+        <div id="touchUp"><span class="text">Up</span></div>
+        <div id="touchDown"><span class="text">Down</span></div>
+        <div id="touchLeft"><span class="text">Left</span></div>
+        <div id="touchRight"><span class="text">Right</span></div>
+        <div id="touchJump"><span class="text">Jump</span></div>
+        <div id="touchA"><span class="letter">A</span></div>
+        <div id="touchB"><span class="letter">B</span></div>
+    </div>
+    <div id="debug"></div>
 </div>
-<div id="debug"></div>
 <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
