--- a/public/play/index.html
+++ b/public/play/index.html
@@ -11,6 +11,7 @@
 
     <title>Open Edit Play</title>
     <link type="text/css" rel="stylesheet" href="/play/css/openeditplay.css">
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="openeditplay.dependencies.js"></script>
     <script src="openeditplay.js"></script>
 </head>
@@ -30,6 +31,5 @@
     </div>
     <div id="debug"></div>
 </div>
-<script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
