back to socket.io

--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" type="image/png" href="/img/logo_graphics.png" />
     <meta charset="UTF-8">
     <title>Open Edit Play</title>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/edit/openeditplay.editor.dependencies.js"></script>
     <script src="/edit/openeditplay.editor.js"></script>
     <!-- import physics -->
