dummy game deleting, physics tuning

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -13,7 +13,7 @@
     <link type="text/css" rel="stylesheet" href="/play/css/openeditplay.play.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="openeditplay.dependencies.js"></script>
-    <script src="openeditplay.js"></script>
+    <script src="openeditplay.min.js"></script>
 </head>
 <body>
 <div id="screen">
