--- a/public/play/index.html
+++ b/public/play/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="/img/logo_graphics.png">
 
     <title>Open Edit Play</title>
-    <link type="text/css" rel="stylesheet" href="/play/css/openeditplay.play.css">
+    <link type="text/css" rel="stylesheet" href="/play/css/openeditplay.player.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="openeditplay.dependencies.js"></script>
     <script src="openeditplay.min.js"></script>
