Electron proof of concept

--- a/public/edit/electron.html
+++ b/public/edit/electron.html
@@ -6,8 +6,10 @@
     <link rel="icon" type="image/png" href="../img/logo_graphics.png" />
     <meta charset="UTF-8">
     <title>Open Edit Play</title>
-    <script src="/socket.io/socket.io.js" defer></script>
     <script src="openeditplay.editor.dependencies.js" defer></script>
+    <script>
+        window.$ = require('jquery') // Electron explodes without this
+    </script>
     <script src="openeditplay.editor.js" defer></script>
     <link type="text/css" rel="stylesheet" href="css/jstree/style.min.css">
     <link type="text/css" rel="stylesheet" href="css/openeditplay.editor.dependencies.css">
