Make oep work somehow without server

--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="../img/logo_graphics.png" />
     <meta charset="UTF-8">
     <title>Open Edit Play</title>
-    <script src="/socket.io/socket.io.js" defer></script>
+<!--    <script src="/socket.io/socket.io.js" defer></script>-->
     <script src="openeditplay.editor.dependencies.js" defer></script>
     <script src="openeditplay.editor.js" defer></script>
     <link type="text/css" rel="stylesheet" href="css/jstree/style.min.css">
